--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -2166,7 +2166,7 @@ img.logo_black {
 }
 
 .custom_select_item,
-.subway_custom_select_item{
+.subway_custom_select_item {
     position: relative;
     -webkit-transition-property: background;
     -webkit-transition-duration: .3s;
@@ -2191,7 +2191,7 @@ img.logo_black {
 
 .custom_select_item a,
 .custom_select_item p,
-.subway_custom_select_item span{
+.subway_custom_select_item span {
     display: block;
     color: #000000;
     font-size: 16px;
@@ -2199,31 +2199,33 @@ img.logo_black {
     padding-left: 18px;
     padding: 3px 10px 3px 38px;
 }
-.subway_custom_select_item span{
-    cursor:pointer;
+
+.subway_custom_select_item span {
+    cursor: pointer;
     font-size: 14px;
 }
 
-.subway_custom_select_item.remove{
+.subway_custom_select_item.remove {
     padding: 3px 0;
-    text-align:center;
-    color:red;
-    cursor:pointer;
+    text-align: center;
+    color: red;
+    cursor: pointer;
 }
-.subway_custom_select_item.remove:before{
+
+.subway_custom_select_item.remove:before {
     background: none;
 }
-.subway_custom_select_item.remove.selected{
-    cursor:none;
+
+.subway_custom_select_item.remove.selected {
+    cursor: none;
 }
-#metro_name.custom_select_title{
+
+#metro_name.custom_select_title {
     font-size: 16px;
 }
 
-
-
 .custom_select_item:before,
-.subway_custom_select_item:before{
+.subway_custom_select_item:before {
     display: block;
     content: "";
     width: 4px;
@@ -2238,16 +2240,15 @@ img.logo_black {
 }
 
 .custom_select_item:hover,
-.subway_custom_select_item:hover{
+.subway_custom_select_item:hover {
     background: rgba(62, 176, 96, .05);
 }
 
 .custom_select_item.selected,
-.subway_custom_select_item.selected{
+.subway_custom_select_item.selected {
     background: rgba(62, 176, 96, .15);
     color: #3eb060;
 }
-
 
 /*-- /Section 1 --*/
 
@@ -3772,7 +3773,8 @@ a.green_pill {
     z-index: 3;
 }
 
-.dropdown_item_title {
+.dropdown_item_title,
+.dropdown_subway_title {
     display: inline-block;
     vertical-align: top;
     cursor: pointer;
@@ -3786,7 +3788,8 @@ a.green_pill {
     z-index: 2;
 }
 
-.dropdown_item_title:before {
+.dropdown_item_title:before,
+.dropdown_subway_title:before {
     content: "";
     border: 1px solid transparent;
     background-color: transparent;
@@ -3824,7 +3827,8 @@ a.green_pill {
     white-space: nowrap;
 }
 
-.dropdow_item_wrapp.active .dropdown_item_title:before {
+.dropdow_item_wrapp.active .dropdown_item_title:before,
+.dropdown_subway_wrap.active .dropdown_subway_title:before {
     -webkit-transform: rotate(-180deg);
     -moz-transform: rotate(-180deg);
     transform: rotate(-180deg);
@@ -3951,16 +3955,20 @@ a.green_pill {
     z-index: -1;
 }
 
-.checkbox label {
+.checkbox label,
+label.all-subways {
     cursor: pointer;
     padding-left: 27px;
     position: relative;
     color: #000000;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 400;
 }
-
-.checkbox label:before {
+label.all-subways {
+    font-size: 18px;
+}
+.checkbox label:before,
+label.all-subways:before {
     display: block;
     content: "";
     width: 16px;
@@ -3974,13 +3982,30 @@ a.green_pill {
     left: 0;
 }
 
-.checkbox input:checked + label:before {
+.checkbox input:checked + label:before,
+input.all-subways:checked + label.all-subways:before{
     background-image: url(../img/checked_white.svg);
     background-position: center;
     background-repeat: no-repeat;
     border: 1px solid #3eb060;
     background-color: #3eb060;
 }
+
+.metro_checkboxies .column1 .checkbox input:checked + label:before,
+.metro_checkboxies .column1 input.all-subways:checked + label.all-subways:before {
+    border: 1px solid #d74343;
+    background-color: #d74343;
+}
+.metro_checkboxies .column2 .checkbox input:checked + label:before,
+.metro_checkboxies .column2 input.all-subways:checked + label.all-subways:before {
+    border: 1px solid #0197c9;
+    background-color: #0197c9;
+}
+
+.metro_checkboxies .checkbox_wrapp {
+    padding-right:10px;
+}
+
 
 .map_object_header .inline.result a {
     display: inline-block;
@@ -4005,16 +4030,15 @@ a.green_pill {
     justify-content: flex-end;
 }
 
-
-#map_box .left .item_wrapp.novisible_1024{
- padding-top: 0;
+#map_box .left .item_wrapp.novisible_1024 {
+    padding-top: 0;
 }
 
-.resp_filter_inner .checkbox{
-margin-top: 7px;
+.resp_filter_inner .checkbox {
+    margin-top: 7px;
 }
 
-.resp_filter_inner{
+.resp_filter_inner {
     padding: 0;
     margin: 0;
 }
@@ -4592,12 +4616,13 @@ margin-top: 7px;
 .green_active .item_title_text,
 .green_active .item_title_text p,
 .custom_select_title.green_active,
-.custom_select_title.green_active a{
+.custom_select_title.green_active a {
     color: #ffffff;
 }
 
 .dropdown_item_title.green_active:before,
-.custom_select_title.green_active:after{
+.dropdown_subway_title.green_active:before,
+.custom_select_title.green_active:after {
     background-image: url(../img/down_arrow_icon_white.svg);
 }
 
@@ -6446,21 +6471,23 @@ a.object_card_title:focus {
     color: #272727;
     font-weight: bold;
 }
-.offices-info{
-    padding-top:8px;
+
+.offices-info {
+    padding-top: 8px;
 }
+
 .offices-info p {
     font-size: 14px;
     line-height: 16px;
     color: #272727;
     font-weight: 700;
 }
+
 .offices-info p span {
     font-size: 14px;
     color: #272727;
     font-weight: normal;
 }
-
 
 .free_office p a {
     font-size: 14px;
@@ -9393,40 +9420,40 @@ html:not([dir="rtl"]) .noUi-horizontal .noUi-handle.noUi-handle-upper {
     line-height: 19px;
 }
 
-
-.item_title_text.district{
+.item_title_text.district {
     margin-bottom: 0;
 }
 
-.thumb_5_footer .free_office a{
+.thumb_5_footer .free_office a {
     padding-left: 5px;
     padding-right: 5px;
 }
 
-.thumb_5_footer .free_office a:after{
+.thumb_5_footer .free_office a:after {
     display: none;
 }
 
-.all-in.bold{
+.all-in.bold {
     padding-top: 5px;
 }
 
-.all-in.bold p{
+.all-in.bold p {
     margin-bottom: 0;
 }
 
-.seo_catalog_urls .target{
+.seo_catalog_urls .target {
     width: 100%;
 }
 
-.seo_catalog_urls .target{
+.seo_catalog_urls .target {
     max-width: 114px;
 }
-.seo_catalog_urls .target .custom_select_title{
+
+.seo_catalog_urls .target .custom_select_title {
     max-width: 108px;
 }
 
-.button-filter-search{
+.button-filter-search {
     color: #FFF;
     font-size: 15px;
     font-weight: 700;
@@ -9436,9 +9463,9 @@ html:not([dir="rtl"]) .noUi-horizontal .noUi-handle.noUi-handle-upper {
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
     border-radius: 3px;
-    -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
     border: none;
     position: relative;
     z-index: 1;
@@ -9448,19 +9475,38 @@ html:not([dir="rtl"]) .noUi-horizontal .noUi-handle.noUi-handle-upper {
     display: flex;
 }
 
-
 .button-filter-search:hover {
     background: #ff7e00;
     color: white;
 }
-.item-type{
+
+.item-type {
     border-right: 1px solid #cdcece;
-    color:#3eb060;
+    color: #3eb060;
     font-size: 13px;
     font-weight: 700;
 }
-.item-id{
+
+.item-id {
     padding-left: 5px;
-    color:#000000;
+    color: #000000;
     font-weight: 700;
+}
+.metro_checkboxies .checkbox{
+    display:block;
+}
+.checkbox_wrapp.floatLeft {
+    float:left;
+}
+.dropdown_item_menu_subways {
+    width:auto;
+    min-width:600px;
+}
+
+.price #price_sel {
+    line-height: 42px;
+    font-weight: 700;
+}
+.price .select_input:after {
+    top:20px;
 }
