--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -9581,3 +9581,7 @@ html:not([dir="rtl"]) .noUi-horizontal .noUi-handle.noUi-handle-upper {
 .target .switch ul .back {
     transform: rotateY(90deg);
 }
+.left.filters {
+    display:flex;
+    justify-content: space-between;
+}
