change card of office

--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -5181,6 +5181,10 @@ a.object_card_title:focus {
     font-size: 16px;
     font-weight: bold;
     color: #272727;
+    max-height: 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .adres p a:hover {
