--- a/frontend/web/css/responsive.css
+++ b/frontend/web/css/responsive.css
@@ -312,6 +312,72 @@
 
 }
 
+@media only screen and (max-width: 991px) {
+	.novisible_990 {
+		display: none;
+	}
+	.visible_990, .item_wrapp.visible_990 {
+		display: inline-block;
+	}
+
+	.more-stage1 {
+		width: 100%;
+		/*height: 100vh;*/
+        display:none;
+		margin-top: auto;
+		max-width: 600px;
+		overflow-y: auto;
+		padding: 20px 25px 50px 25px;
+		background: #ffffff;
+		-webkit-box-shadow: 4px 5px 5px 0 rgba(0, 0, 0, .3);
+		-moz-box-shadow: 4px 5px 5px 0 rgba(0, 0, 0, .3);
+		box-shadow: 4px 5px 5px 0 rgba(0, 0, 0, .3);
+	}
+    .more-stage1 .item_wrapp{
+        display: block;
+    }
+	.item_wrapp.search-button{
+		position: absolute;
+		top:0;
+		right: 140px;
+	}
+
+	.more-stage1 .dropdown_item_title {
+		width: 100%;
+	}
+
+	.more-stage1 .dropdow_item_wrapp .dropdown_item_title,
+	.more-stage1 .dropdown_subway_wrap .dropdown_item_title{
+		padding: 20px 19px 3px 0;
+		-webkit-border-radius: 0;
+		-moz-border-radius: 0;
+		border-radius: 0;
+		border: none;
+		background-color: transparent !important;
+	}
+
+	.more-stage1 .dropdow_item_wrapp .dropdown_item_title:before
+	.more-stage1 .dropdown_subway_wrap .dropdown_item_title:before{
+		top: 29px;
+		right: 0;
+	}
+
+	.more-stage1 .dropdow_item_wrapp .dropdown_item_menu,
+    .more-stage1 .dropdown_subway_wrap .dropdown_item_menu{
+		position: relative;
+		top: 0;
+		left: 0;
+		z-index: 9;
+	}
+
+	.more-stage1 .dropdow_item_wrapp .item_title_text,
+	.more-stage1 .dropdown_subway_wrap .item_title_text{
+		font-weight: bold;
+	}
+
+
+}
+
 @media only screen and (max-width: 900px) {
 
 	h1 {
@@ -908,7 +974,7 @@
 	}
 
 	.visible_768 {
-		display: block !important;
+		display: inline-block !important;
 	}
 
 	.green_pill_2 {
@@ -1010,7 +1076,7 @@
 	}
 
 	.visible_767 {
-		display: block !important;
+		display: inline-block !important;
 	}
 
 	.pill_checlbox label {
