fix chosen filters texts for mobile version filters

--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -6131,6 +6131,7 @@ a.object_card_title:focus {
     min-height: 20px;
     font-size: 15px;
     line-height: 20px;
+    word-wrap: break-word;
 }
 
 .radio_metro_wrapp_2 {
